scss/_uscc-animations.scss
@-webkit-keyframes pop-in {
0% { opacity: 0; -webkit-transform: scale(0.5); }
100% { opacity: 1; -webkit-transform: scale(1); }
}
@-moz-keyframes pop-in {
0% { opacity: 0; -moz-transform: scale(0.5); }
100% { opacity: 1; -moz-transform: scale(1); }
}
@keyframes pop-in {
0% { opacity: 0; transform: scale(0.5); }
100% { opacity: 1; transform: scale(1); }
}

@-webkit-keyframes popout {
0% { opacity: 1; -webkit-transform: scale(1); }
100% { opacity: 0; -webkit-transform: scale(0.5); visibility: hidden;}
}
@-moz-keyframes popout {
0% { opacity: 1; -moz-transform: scale(1); }
100% { opacity: 0; -moz-transform: scale(0.5); visibility: hidden;}
}
@keyframes popout {
0% { opacity: 1; transform: scale(1); }
100% { opacity: 0; transform: scale(0.5); visibility: hidden;}
}

.pop-in {
  -webkit-animation:pop-in 0.1s;
  -moz-animation:pop-in 0.1s;
  -ms-animation:pop-in 0.1s;
}
.pop-out {
  -webkit-animation:popout 0.1s;
  -moz-animation:popout 0.1s;
  -ms-animation:popout 0.1s;
  animation-fill-mode: forwards;
}

//Digit Flipper styles
.flip {
	display: inline-block;
}
// .flip-container {
// 	position: relative;
// 	.old, .new {
// 		position: absolute;
// 	}
// 	.old {//starts invisible
// 		//visibility: hidden;
// 	}
// }

